# mjpg-streamer

./: .gitignore  RUN_login.sh  RUN_logout.sh
mjpg-streamer-experimental/: CMakeLists.txt  mjpg_streamer.c  mjpg_streamer.cpp  utils.h
mjpg-streamer-experimental/plugins/: input.h  output.h
mjpg-streamer-experimental/plugins/input_image/: CMakeLists.txt  input_image.cpp  input_image.h
mjpg-streamer-experimental/plugins/input_opencv/: input_opencv.cpp  input_opencv.h
mjpg-streamer-experimental/plugins/output_http/: CMakeLists.txt  httpd.cpp  httpd.h  output_http.cpp
